client/stylesheets/style.css
.pre {
  white-space: pre;
}

.main {
    background: #fff;
    border-radius: 3px;
    padding: 10px;
    margin-bottom: 10px;
    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
    -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
}

textarea {
    resize: vertical;
}

body {
    background: #eee;
    color: #666666;
    padding-top: 60px;
    font-family: 'Source Sans Pro', sans-serif;
}

#spinner {
    height: 300px;
}


@media print {
    .no-print,
    .no-print * {
        display: none !important;
    }
}

